2007-08-10  Lars Clausen  <lars@raeder.dk>

	* po/POTFILES.in: Patch from Elie Roux
	(elie.roux@enst-bretagne.fr) adds two missing POTFILES.

	* app/app_procs.c (app_exit): Remove kludge printf from exit.
	Fixes bug #442044.

	* installer/rpm/dia.spec.fedora-core-6: Spec file for fedora core
	6, from John Pye (john@curioussymbols.com).  The main Dia
	maintainers will probably not maintain this, but patches to update
	to more current versions are welcome.

	* app/object_ops.c (object_list_align_v): Symmetry between vert
	and horiz alignment functions.  Probably fixes bug #442054.

	* app/interface.c (create_sheets): Use a slightly more useful
	sheet as default selection.  Fixes bug #442309.

	* sheets/Lights.sheet.in: Patch from Elie Roux
	(elie.roux@enst-bretagne.fr) fixes some wrong shape names.

	* app/menus.c (menus_clear_recent): Don't assert non-critical
	things, just put appropriate ifs around them.

	* app/create_object.c (create_object_button_release): Update menus
	after creating an object.

2007-08-09  Steffen Macke <sdteffen@gmail.com>

	* installer/win32/dia.nsi: Added Lights shapes and sheet

2007-08-09  Lars Clausen  <lars@raeder.dk>

	* doc/fr/graphics/*: Updated with french versions where needed.
	Last fix from Thomas Harding <thomas.harding@laposte.net>, closing
	bug #427552.
	
	* lib/element.h (ELEMENT_COMMON_PROPERTIES): Use
	PROP_FLAG_NO_DEFAULTS on element widths -- gives strange caching
	behaviour for shapes.

	* objects/ER/entity.c: Add PROP_FLAG_NO_DEFAULTS to make possible
	to set "weak" attribute from intdata.

	* shapes/Lights/*: Changed hardcoded B&W to foreground/background.

	* doc/en/usage-customization.xml: Fixed wrong image filename.

	* doc/fr/hardcopies.makefile: Clean-up of some spaces.

	* doc/en/usage-objects-basic.xml: Added some more detail on how to
	use the text object.  Fixes bug #455400.

	* objects/FS/flow.c: Added undo support, fixing bug #456419.

	* objects/SISSI/sissi_object.c (sissi_object_create): Fixed